Added details screen, save images of news, changed colors+appIcon

--- a/Everydaystory/app/src/main/res/layout/row_home.xml
+++ b/Everydaystory/app/src/main/res/layout/row_home.xml
@@ -3,12 +3,22 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/newsImageView"
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/newsImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:src="@mipmap/ic_launcher"/>
+
+        <android.support.v4.widget.ContentLoadingProgressBar
+            android:id="@+id/newsImageProgessBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/newsTitleTextView"
